--- a/index.html
+++ b/index.html
@@ -1,61 +1,105 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>보문고등학교 일정</title>
-<link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/main.min.css" rel="stylesheet">
+
+<!-- FullCalendar global build (CSS + JS) -->
+<link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
+
+<!-- 사용자 CSS -->
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-  <h1 id="homeBtn">보문고등학교 일정</h1>
-  <div>
-    <input type="password" id="adminPass" placeholder="관리자 비밀번호">
-    <button id="adminBtn">관리자 모드</button>
+
+<header class="site-header">
+  <div class="header-inner">
+    <h1 id="homeBtn" class="site-title">보문고등학교 일정</h1>
+
+    <div class="admin-area">
+      <input id="adminPass" class="admin-input" type="password" placeholder="관리자 비밀번호">
+      <button id="adminBtn" class="admin-btn">관리자 모드</button>
+    </div>
   </div>
+
+  <nav class="nav-sections" aria-label="섹션 이동">
+    <button class="nav-btn" data-target="school">학교 일정</button>
+    <button class="nav-btn" data-target="class">학급 일정</button>
+    <button class="nav-btn" data-target="assignment">수행평가</button>
+    <button class="nav-btn" data-target="exam">시험 일정</button>
+    <button class="nav-btn" data-target="notice">공지사항</button>
+  </nav>
 </header>
 
-<main id="home">
-  <div id="calendar"></div>
+<main>
+  <!-- HOME (달력) -->
+  <section id="home" class="home-section">
+    <div id="calendar" class="calendar-card"></div>
+  </section>
+
+  <!-- 각 섹션: admin-form (입력창) 은 기본 hidden -->
+  <section id="school" class="section-card">
+    <h2>우리 학교 일정</h2>
+    <div class="admin-form hidden">
+      <input id="schoolDate" type="date">
+      <input id="schoolEvent" placeholder="행사 이름">
+      <button id="schoolAddBtn" class="action-btn">등록</button>
+      <!-- 섹션 초기화 버튼(관리자 전용) -->
+      <button class="section-reset hidden" data-sec="school">섹션 초기화</button>
+    </div>
+    <ul id="schoolList" class="item-list"></ul>
+  </section>
+
+  <section id="class" class="section-card">
+    <h2>우리 학급 일정</h2>
+    <div class="admin-form hidden">
+      <input id="classDate" type="date">
+      <input id="classEvent" placeholder="행사 이름">
+      <button id="classAddBtn" class="action-btn">등록</button>
+      <button class="section-reset hidden" data-sec="class">섹션 초기화</button>
+    </div>
+    <ul id="classList" class="item-list"></ul>
+  </section>
+
+  <section id="assignment" class="section-card">
+    <h2>수행평가</h2>
+    <div class="admin-form hidden">
+      <input id="assignmentDate" type="date">
+      <input id="assignmentEvent" placeholder="내용">
+      <button id="assignmentAddBtn" class="action-btn">등록</button>
+      <button class="section-reset hidden" data-sec="assignment">섹션 초기화</button>
+    </div>
+    <ul id="assignmentList" class="item-list"></ul>
+  </section>
+
+  <section id="exam" class="section-card">
+    <h2>시험 일정</h2>
+    <div class="admin-form hidden">
+      <input id="examDate" type="date">
+      <input id="examEvent" placeholder="시험 이름">
+      <button id="examAddBtn" class="action-btn">등록</button>
+      <button class="section-reset hidden" data-sec="exam">섹션 초기화</button>
+    </div>
+    <ul id="examList" class="item-list"></ul>
+  </section>
+
+  <section id="notice" class="section-card">
+    <h2>공지사항</h2>
+    <div class="admin-form hidden">
+      <input id="noticeEvent" placeholder="공지 내용">
+      <button id="noticeAddBtn" class="action-btn">등록</button>
+      <button class="section-reset hidden" data-sec="notice">섹션 초기화</button>
+    </div>
+    <ul id="noticeList" class="item-list"></ul>
+  </section>
 </main>
 
-<section id="school" class="section">
-  <h2>우리 학교 일정</h2>
-  <ul id="schoolList"></ul>
-  <div class="admin-form hidden"></div>
-  <input type="date" id="schoolDate"><input type="text" id="schoolEvent" placeholder="일정 입력"><button id="schoolAddBtn">등록</button>
-</section>
-
-<section id="class" class="section">
-  <h2>우리 학급 일정</h2>
-  <ul id="classList"></ul>
-  <div class="admin-form hidden"></div>
-  <input type="date" id="classDate"><input type="text" id="classEvent" placeholder="일정 입력"><button id="classAddBtn">등록</button>
-</section>
-
-<section id="assignment" class="section">
-  <h2>수행평가</h2>
-  <ul id="assignmentList"></ul>
-  <div class="admin-form hidden"></div>
-  <input type="date" id="assignmentDate"><input type="text" id="assignmentEvent" placeholder="내용 입력"><button id="assignmentAddBtn">등록</button>
-</section>
-
-<section id="exam" class="section">
-  <h2>시험 일정</h2>
-  <ul id="examList"></ul>
-  <div class="admin-form hidden"></div>
-  <input type="date" id="examDate"><input type="text" id="examEvent" placeholder="내용 입력"><button id="examAddBtn">등록</button>
-</section>
-
-<section id="notice" class="section">
-  <h2>공지사항</h2>
-  <ul id="noticeList"></ul>
-  <div class="admin-form hidden"></div>
-  <input type="text" id="noticeEvent" placeholder="공지 입력"><button id="noticeAddBtn">등록</button>
-</section>
-
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/main.min.js"></script>
+<!-- FullCalendar script (global build) -->
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+<!-- 앱 스크립트 -->
 <script src="script.js"></script>
 </body>
 </html>
+
